<resources>
    <string name="app_name">Ourpay</string>
    <string name="error">error</string>

    <!-- Font Strings -->
    <string name="font_lato_black">fonts/Lato-Black.ttf</string>
    <string name="font_lato_black_italic">fonts/Lato-BlackItalic.ttf</string>
    <string name="font_lato_bold">fonts/Lato-Bold.ttf</string>
    <string name="font_lato_bold_italic">fonts/Lato-BoldItalic.ttf</string>
    <string name="font_lato_hairline">fonts/Lato-Hairline.ttf</string>
    <string name="font_lato_hairline_italic">fonts/Lato-HairlineItalic.ttf</string>
    <string name="font_lato_heavy">fonts/Lato-Heavy.ttf</string>
    <string name="font_lato_heavy_italic">fonts/Lato-HeavyItalic.ttf</string>
    <string name="font_lato_italic">fonts/Lato-Italic.ttf</string>
    <string name="font_lato_light">fonts/Lato-Light.ttf</string>
    <string name="font_lato_light_italic">fonts/Lato-LightItalic.ttf</string>
    <string name="font_lato_medium">fonts/Lato-Medium.ttf</string>
    <string name="font_lato_medium_italic">fonts/Lato-MediumItalic.ttf</string>
    <string name="font_lato_regular">fonts/Lato-Regular.ttf</string>
    <string name="font_lato_semibold">fonts/Lato-Semibold.ttf</string>
    <string name="font_lato_semibold_italic">fonts/Lato-SemiboldItalic.ttf</string>
    <string name="font_lato_thin">fonts/Lato-Thin.ttf</string>
    <string name="font_lato_thin_italic">fonts/Lato-ThinItalic.ttf</string>

    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="forgot_password">forgot password?</string>
    <string name="username">Username</string>
    <string name="marydoe_ourpay">marydoe.ourpay</string>
    <string name="password">Password</string>
    <string name="_9679_9679_9679">● ● ●</string>
    <string name="_9679_9679_9679_9679_9679_9679_9679_9679_9679_9679">● ● ● ● ● ● ● ● ● ●</string>
    <string name="create_account">create account</string>
    <string name="ic_back">ic_back</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mary_doe">Mary Doe</string>
    <string name="contact_number">Contact Number</string>
    <string name="_1_202_555_0104">+1 202 555 0104</string>
    <string name="email_address">Email Address</string>
    <string name="marydoe_gmail_com">marydoe@gmail.com</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="_1234_5678_9012_3456">1234 5678 9012 3456</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cardholder_s_name">Cardholder\'s Name</string>
    <string name="cvv">CVV</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="dec_2025">Dec 2025</string>
    <string name="discover_the_products_you_love">discover the products you love</string>
    <string name="shop">Shop</string>
    <string name="payment_schedule">Payment Schedule</string>
    <string name="ourpay">Ourpay</string>
    <string name="account">Account</string>
    <string name="checkout">Checkout</string>
    <string name="ourpay_is_cocosa_s_exclusive_installment_payment_plan_solution_ourpay_allows_you_to_checkout_with_all_the_items_you_love_and_pay_over_four_easy_interest_free_installments_simply_browse_the_site_and_add_your_preferred_goodies_to_your_cart_proceed_to_checkout_and_pay_less_today_with_ourpay">Ourpay is Cocosa\'s exclusive installment payment plan solution. Ourpay allows you to checkout with all the items you love and pay over four easy, interest free installments. Simply browse the site and add your preferred goodies to your cart. Proceed to checkout and pay less today with Ourpay!</string>
    <string name="benefits">benefits</string>
    <string name="shop_all_your_favorite_sales">shop all your favorite sales</string>
    <string name="interest_free">interest free</string>
    <string name="easy_to_use_no_long_sign_ups">easy to use - no long sign ups</string>
    <string name="secure_payment_method">secure payment method</string>
    <string name="get_that_pair_of_shoes_and_handbag_using_ourpay">get that pair of shoes and handbag using ourpay</string>
    <string name="our_partners">our partners</string>
    <string name="active_plans">Active Plans</string>
    <string name="balance_owing">Balance Owing</string>
    <string name="remaining_credit">Remaining Credit</string>
    <string name="overdue_plans">Overdue Plans</string>
    <string name="payment_plans">Payment Plans</string>
    <string name="scheduled_plans">Scheduled Plans</string>
    <string name="past_payments">Past Payments</string>
    <string name="remaining_deliveries">Remaining Deliveries</string>
    <string name="date">Date</string>
    <string name="_02_01_17_2_45pm">02/01/17, 2:45pm</string>
    <string name="balance">Balance:&#160;</string>
    <string name="_50">$50</string>
    <string name="_25">$25</string>
    <string name="gold_membership">Gold Membership</string>
    <string name="your_cards">your cards</string>
    <string name="add_new_credit_card">add new credit card</string>
    <string name="ic_logout">ic_logout</string>
    <string name="controller_account_header">controller_account_header</string>
    <string name="ic_edit">ic_edit</string>
    <string name="controller_edit_account_header">controller_edit_account_header</string>
    <string name="edit_account">edit account</string>
    <string name="save_changes">Save Changes</string>
    <string name="mobile_verification">mobile verification</string>
    <string name="country_code">Country Code</string>
    <string name="australia_61">Australia (+61)</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_sms_verification">Send SMS Verification</string>
    <string name="_202_555_0104">202 555 0104</string>
    <string name="fill_out_credit_card_details">fill out credit card details</string>
    <string name="verify_sms_code">Verify SMS Code</string>
    <string name="no_verification_code_yet">no verification code yet?</string>
    <string name="resend">resend</string>
    <string name="enter_code_below">enter code below</string>
    <string name="please_type_the_verification_code_sent_to">please type the verification code sent to (01) 202 555 0104</string>
    <string name="verification_code">verification code</string>
    <string name="valid_thru">valid thru</string>
    <string name="edit_credit_card">edit credit card</string>
    <string name="products">products</string>
    <string name="sales">sales</string>
    <string name="ic_search">ic_search</string>
    <string name="i_am_looking_for">I am looking for...</string>
    <string name="cancel">Cancel</string>
    <string name="ic_down">ic_down</string>
    <string name="pay_less">Pay less&#160;</string>
    <string name="today_with">today with</string>
    <string name="estimated_delivery">Estimated Delivery</string>
    <string name="_05_06_15_09_06_17_orders_are_dispatched_directly_to_you_from_austrailia">05/06/15 - 09/06/17\nOrders are dispatched directly to you from Austrailia.</string>
    <string name="return_policy">Return Policy</string>
    <string name="please_refer_to_our_return_policy">Please refer to our Return Policy</string>
    <string name="measurements">Measurements</string>
    <string name="size_guide">Size Guide</string>
    <string name="pricing">Pricing</string>
    <string name="about_atom">About Atom</string>
    <string name="a_full_range_of_compression_wear_where_technology_is_at_the_heart_of_atom_pro_compression_born_out_of_the_desire_to_find_a_effective_great_looking_comfortable_range_that_enables_you_to_perform_at_your_best_for_extended_periods_of_time">A full range of compression wear. Where technology is at the heart of ATOM Pro Compression. Born out of the desire to find a effective, great looking, comfortable range that enables you to perform at your best for extended periods of time.</string>
    <string name="_100_rayon_mykonos_embroidered_off_shoulder_top_white_elasticated_top_and_bottom_the_clothing_at_morrisday_is_true_to_standard_austrailian_sizing">•  100% Rayon\n\n•  Mykonos Embroidered Off Shoulder Top (White)\n\n•  Elasticated top and bottom\n\n•  The clothing at Morrisday is true to standard Austrailian sizing</string>
    <string name="checkout_lowercase">checkout</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="you_currently_do_not_have_any_addresses">You do not currently have any address.</string>
    <string name="welcome_to_my_address">Welcome to My Address!</string>
    <string name="add_new_delivery_address">Add New Delivery Address</string>
    <string name="billing_address">Billing Address</string>
    <string name="add_new_billing_address">Add New Billing Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="add_new_payment_method">Add New Payment Method</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="grand_total">Grand Total</string>
    <string name="select_payment_method">select payment method</string>
    <string name="save_details">Save Details</string>
    <string name="select_delivery_address">select delivery address</string>
    <string name="or_add_new_delivery_address">or add new delivery address</string>
    <string name="address">Address</string>
    <string name="regent_u_7_1824_aubrey_st">Regent U 7, 1824 Aubrey St</string>
    <string name="surfers_paradise">Surfers Paradise</string>
    <string name="suburb">Suburb</string>
    <string name="country">Country</string>
    <string name="australia">Australia</string>
    <string name="state">State</string>
    <string name="queensland">Queensland</string>
    <string name="postcode">Postcode</string>
    <string name="_4170">4170</string>
    <string name="qty_1">Qty: 1</string>
    <string name="size_medium">Size: Medium</string>
    <string name="regent_u_7_1824_aubrey_st_surfers_paradise_qld_4170_0_123_224_32_34">Regent U 7, 1824 Aubrey St Surfers Paradise, QLD, 4170, +0 (123) 224-32-34</string>
    <string name="valid_thru_dec_2025">valid thru Dec 2025</string>
    <string name="_3456">**** **** **** 3456</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="total_payment">Total Payment</string>
    <string name="_350_00">$350.00</string>
    <string name="order_number">Order Number</string>
    <string name="_49206291">49206291</string>
    <string name="thank_you_for_using">Thank you for using</string>
    <string name="order_successful">order successful!</string>
    <string name="your_order_will_arrive_within_14_to_28_working_days_after_the_sale_has_finished">Your order will arrive within 14 to 28 working days after the sale has finished.</string>
</resources>
