<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_credit_card"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/row_account_card_number"
        fontPath="@string/font_lato_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:text="@string/_1234_5678_9012_3456"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xxxlarge"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/row_account_card_holder"
        fontPath="@string/font_lato_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mary_doe"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/row_account_card_expiry"
        fontPath="@string/font_lato_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/valid_thru"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        tools:ignore="MissingPrefix" />

</LinearLayout>