<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/partial_signup_footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="20dp"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/partial_signup_footer_member_text"
        fontPath="@string/font_lato_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/not_a_member_yet"
        android:textSize="@dimen/text_size_xxxlarge"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/partial_signup_footer_signup_text"
        fontPath="@string/font_lato_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_xxxlarge"
        tools:ignore="MissingPrefix" />

</LinearLayout>