<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/OPButtonStyle.Dark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        fontPath="@string/font_lato_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_less"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xlarge"
        tools:ignore="MissingPrefix" />

    <TextView
        fontPath="@string/font_lato_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_with"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xlarge"
        tools:ignore="MissingPrefix" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:src="@drawable/ic_logo"
        android:tint="@color/white" />

</LinearLayout>