<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/cell_checkout_item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/bg_checkout_address"
        android:clickable="true"
        android:gravity="start|bottom"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/cell_checkout_address_name"
            fontPath="@string/font_lato_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mary_doe"
            android:textColor="@color/address_text_selector"
            android:textSize="@dimen/text_size_xlarge"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/cell_checkout_address_text"
            fontPath="@string/font_lato_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cell_checkout_address_name"
            android:text="@string/regent_u_7_1824_aubrey_st_surfers_paradise_qld_4170_0_123_224_32_34"
            android:textColor="@color/address_text_selector"
            android:textSize="@dimen/text_size_medium"
            tools:ignore="MissingPrefix" />

    </RelativeLayout>

</RelativeLayout>